<resources>
    <string name="app_name">CardGame</string>
    <string name="welcome_to_cardgame">Welcome to CardGame!</string>
    <string name="guesscardgame">Play Game</string>
    <string name="quit">Quit</string>
    <string name="guess_card_game">Guess Card Game</string>
    <string name="_1_players">1 Players</string>
    <string name="_2_players">2 Players</string>
    <string name="rules">Rules</string>
    <string name="quit2">Quit</string>
    <string name="game_rules">Game Rules</string>
    <string name="guess_rules">You have to guess if the next card is higher or lower than the card on the table. If you Guess correct you get one point. If you guess wrong you get no points. it will show how many times you have guessed incorrect. The player with the Highest points wins.</string>
    <string name="back">Back</string>
    <string name="start_game">Start single player Game</string>
    <string name="goback">Back</string>
    <string name="startgame2">Start 2 player game</string>
    <string name="_2_player_game">2 Player Game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="points">Player 1 Points:</string>
    <string name="player_2_points">Player 2 Points:</string>
    <string name="wrong_guess">Wrong Guess:</string>
    <string name="Wrong_guess1">Wrong Guess:</string>
    <string name="pointsp1">Points:</string>
    <string name="wrong_guessed_times">Wrong Guess:</string>
    <string name="play_again">Play again</string>
    <string name="go_back">Go back</string>
    <string name="one_player_game">One Player Game</string>
    <string name="highscore">HighScore</string>
    <string name="HighScores">Highscore</string>
    <string name="highscorebutton">Highscore</string>
    <string name="Hback">Back</string>
    <string name="reset_scores">Reset scores</string>
    <string name="singelPlayer">One Player Game</string>
    <string name="goingback">Go back</string>
    <string name="pointsforsingel">Points:</string>
    <string name="Singelwrongguessd">Wrong guessed times:</string>
    <string name="play_againSingel">Play again</string>
    <string name="back2player">Back</string>
    <string name="play_again2player">Play Again</string>

</resources>