<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgoundie"
    tools:context=".Player1Fragment">


    <ImageButton
        android:id="@+id/higherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="210dp"
        android:src="@drawable/baseline_arrow_upward_24" />

    <TextView
        android:id="@+id/tv_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/singelPlayer"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/pack_backside"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cardsbackside" />

    <ImageView
        android:id="@+id/show_card"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginTop="220dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/clover3" />

    <Button
        android:id="@+id/p1_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="50dp"
        android:text="@string/goingback"
        android:textSize="20sp"
        android:textColor="@color/forestGreen"
        android:backgroundTint="@color/lightGreen"/>

    <TextView
        android:id="@+id/tv_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="500dp"
        android:text="@string/pointsforsingel"
        android:textColor="@color/lightGreen"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_showPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginStart="200sp"
        android:text=""
        android:textColor="@color/lightGreen"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvWrongGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="540dp"
        android:textColor="@color/lightGreen"
        android:textSize="20sp"
        android:text="@string/Singelwrongguessd" />

    <TextView
        android:id="@+id/tvWrongCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="540dp"
        android:textColor="@color/lightGreen"
        android:textSize="20sp"
        android:text="" />

    <ImageButton
        android:id="@+id/lowerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="150dp"
        android:src="@drawable/baseline_arrow_downward_24" />

    <Button
        android:id="@+id/playAgainBtnSingel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="200dp"
        android:textSize="20sp"
        android:textColor="@color/forestGreen"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/play_againSingel" />
</FrameLayout>