<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forestGreen"
    tools:context=".Player2Fragment">


    <TextView
        android:id="@+id/tvPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/lightGreen"
        android:textStyle="bold"
        android:text="@string/_2_player_game" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="70dp"
        android:src="@drawable/cardsbackside" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="230dp"
        android:src="@drawable/cardsbackside" />

    <ImageView
        android:id="@+id/showCard1"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="270dp"
        android:src="@drawable/clover1" />

    <ImageView
        android:id="@+id/showCard2"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginTop="270dp"
        android:layout_marginStart="230dp"
        android:src="@drawable/clover1" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="90dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/player_1" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="250dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/player_2" />

    <ImageButton
        android:id="@+id/imageButtonHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="125dp"
        android:src="@drawable/baseline_arrow_upward_24" />

    <ImageButton
        android:id="@+id/imageButtonLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="70dp"
        android:src="@drawable/baseline_arrow_downward_24" />

    <ImageButton
        android:id="@+id/imageButtonHigher2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="285dp"
        android:src="@drawable/baseline_arrow_upward_24" />

    <ImageButton
        android:id="@+id/imageButtonLower2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginStart="230dp"
        android:src="@drawable/baseline_arrow_downward_24" />

    <TextView
        android:id="@+id/p1Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/points" />

    <TextView
        android:id="@+id/p1Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/Wrong_guess1" />

    <TextView
        android:id="@+id/p2Points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="230dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/player_2_points" />

    <TextView
        android:id="@+id/p2Wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="230dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="@string/wrong_guess" />

    <Button
        android:id="@+id/player2BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/lightGreen"
        android:textColor="@color/forestGreen"
        android:text="Back" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginStart="220dp"
        android:backgroundTint="@color/lightGreen"
        android:textColor="@color/forestGreen"
        android:text="Play Again" />

    <TextView
        android:id="@+id/p1ShowPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="150dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="" />

    <TextView
        android:id="@+id/p1WrongGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="130dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="" />

    <TextView
        android:id="@+id/p2ShowPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="370dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="" />

    <TextView
        android:id="@+id/p2WrongGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="350dp"
        android:textSize="18sp"
        android:textColor="@color/lightGreen"
        android:text="" />

    <TextView
        android:id="@+id/tvPlayerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="" />
</FrameLayout>